--- a/Data/User/GameConfig/RBUE08.ini
+++ b/Data/User/GameConfig/RBUE08.ini
@@ -13,7 +13,19 @@ PH_ExtraParam = 0
 PH_ZNear = 
 PH_ZFar = 
 [Gecko]
-[Wii]
+[Wiimote1]
+IR/Center = 50
+IR/Width = 40
+IR/Height = 31
+[Wiimote2]
+IR/Center = 50
+IR/Width = 40
+IR/Height = 31
+[Wiimote3]
+IR/Center = 50
+IR/Width = 40
+IR/Height = 31
+[Wiimote4]
 IR/Center = 50
 IR/Width = 40
 IR/Height = 31
