--- a/Data/User/GameConfig/RSPP01.ini
+++ b/Data/User/GameConfig/RSPP01.ini
@@ -12,7 +12,19 @@ EmulationIssues =
 [Video]
 ProjectionHack = 0
 [Gecko]
-[Wii]
+[Wiimote1]
+IR/Center = 60
+IR/Width = 54
+IR/Height = 55
+[Wiimote2]
+IR/Center = 60
+IR/Width = 54
+IR/Height = 55
+[Wiimote3]
+IR/Center = 60
+IR/Width = 54
+IR/Height = 55
+[Wiimote4]
 IR/Center = 60
 IR/Width = 54
 IR/Height = 55
