--- a/Data/User/GameConfig/RM3P01.ini
+++ b/Data/User/GameConfig/RM3P01.ini
@@ -27,3 +27,19 @@ EFBCopyEnable = True
 DisableWiimoteSpeaker = 1
 [Video_Hacks]
 EFBEmulateFormatChanges = True
+[Wiimote1]
+IR/Center = 89
+IR/Width = 61
+IR/Height = 72
+[Wiimote2]
+IR/Center = 89
+IR/Width = 61
+IR/Height = 72
+[Wiimote3]
+IR/Center = 89
+IR/Width = 61
+IR/Height = 72
+[Wiimote4]
+IR/Center = 89
+IR/Width = 61
+IR/Height = 72
