--- a/Data/User/GameConfig/RM8E01.ini
+++ b/Data/User/GameConfig/RM8E01.ini
@@ -22,3 +22,19 @@ PH_ZFar =
 ForceFiltering = False
 [Video_Hacks]
 DlistCachingEnable = False
+[Wiimote1]
+IR/Center = 52
+IR/Width = 63
+IR/Height = 52
+[Wiimote2]
+IR/Center = 52
+IR/Width = 63
+IR/Height = 52
+[Wiimote3]
+IR/Center = 52
+IR/Width = 63
+IR/Height = 52
+[Wiimote4]
+IR/Center = 52
+IR/Width = 63
+IR/Height = 52
