--- a/Source/Core/DolphinWX/DolphinWX.rc
+++ b/Source/Core/DolphinWX/DolphinWX.rc
@@ -1,4 +1,5 @@
 // Microsoft Visual C++ generated resource script.
 //
-#include "resource.h"
 IDI_ICON1               ICON                    "..\\..\\..\\Installer\\Dolphin.ico"
+#include "resource.h"
+#include <wx/msw/wx.rc>
