--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ Binary/Darwin*
 Source/Core/Common/Src/scmrev.h
 *.opensdf
 *.sdf
-[Bb]uild
+Build
 *.ipch
 .sconsign.dblite
 Externals/scons-local/*
