--- a/Data/User/GameConfig/RD2E41.ini
+++ b/Data/User/GameConfig/RD2E41.ini
@@ -1,5 +1,6 @@
 # RD2E41 - Red Steel 2
 [Core] Values set here will override the main dolphin settings.
+GFXBackend = OpenGL
 [EmuState] The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
 EmulationIssues = 
