[Inifile, etc] change gameini inputconfig override
changes gameini inputconfig to copy section from baseini on first use, rather than doing a LoadConfig override. makes previous changes to IniFile::Set and ControllerEmu::ControlGroup::LoadConfig unnecessary and they can therefore be reverted.

fixes to CI and DInput init logic. CI::Init and CI:IsInit waits for init to complete.

VideoConfig hotkey fixes

rename ControlDialog to ControlDiag to match other filenames

moved debugging mode menu option from file to view menu

minor revert i FrameAui

linux build fixes

--- a/Source/Core/DolphinWX/Dolphin.vcxproj.filters
+++ b/Source/Core/DolphinWX/Dolphin.vcxproj.filters
@@ -135,7 +135,7 @@
     <ClCompile Include="Src\GCMicDlg.cpp">
       <Filter>GUI</Filter>
     </ClCompile>
-    <ClCompile Include="Src\ControlDialog.cpp">
+    <ClCompile Include="Src\ControlDiag.cpp">
       <Filter>GUI\InputConfig</Filter>
     </ClCompile>
   </ItemGroup>
@@ -267,7 +267,7 @@
     <ClInclude Include="Src\GCMicDlg.h">
       <Filter>GUI</Filter>
     </ClInclude>
-    <ClInclude Include="Src\ControlDialog.h">
+    <ClInclude Include="Src\ControlDiag.h">
       <Filter>GUI\InputConfig</Filter>
     </ClInclude>
   </ItemGroup>
