--- a/Data/User/GameConfig/RBUE08.ini
+++ b/Data/User/GameConfig/RBUE08.ini
@@ -14,18 +14,22 @@ PH_ZNear =
 PH_ZFar = 
 [Gecko]
 [Wiimote1]
+FirstUse = true
 IR/Center = 50
 IR/Width = 40
 IR/Height = 31
 [Wiimote2]
+FirstUse = true
 IR/Center = 50
 IR/Width = 40
 IR/Height = 31
 [Wiimote3]
+FirstUse = true
 IR/Center = 50
 IR/Width = 40
 IR/Height = 31
 [Wiimote4]
+FirstUse = true
 IR/Center = 50
 IR/Width = 40
 IR/Height = 31
