--- a/Data/User/GameConfig/RD2P41.ini
+++ b/Data/User/GameConfig/RD2P41.ini
@@ -1,6 +1,6 @@
 # RD2P41 - Red Steel 2
 [Core] Values set here will override the main dolphin settings.
-GFXBackend = OpenGL
+GFXBackend = OpenGL # Intro video an possibly other videos distorted with d3d11, needs d3d9 or ogl
 [EmuState] The Emulation State. 1 is worst, 5 is best, 0 is not set.
 EmulationStateId = 4
 EmulationIssues = 
