--- a/Data/User/GameConfig/RM3P01.ini
+++ b/Data/User/GameConfig/RM3P01.ini
@@ -28,18 +28,22 @@ DisableWiimoteSpeaker = 1
 [Video_Hacks]
 EFBEmulateFormatChanges = True
 [Wiimote1]
+FirstUse = true
 IR/Center = 89
 IR/Width = 61
 IR/Height = 72
 [Wiimote2]
+FirstUse = true
 IR/Center = 89
 IR/Width = 61
 IR/Height = 72
 [Wiimote3]
+FirstUse = true
 IR/Center = 89
 IR/Width = 61
 IR/Height = 72
 [Wiimote4]
+FirstUse = true
 IR/Center = 89
 IR/Width = 61
 IR/Height = 72
