--- a/Data/User/GameConfig/RM8P01.ini
+++ b/Data/User/GameConfig/RM8P01.ini
@@ -18,18 +18,22 @@ ForceFiltering = False
 [Video_Hacks]
 DlistCachingEnable = False
 [Wiimote1]
+FirstUse = true
 IR/Center = 52
 IR/Width = 63
 IR/Height = 52
 [Wiimote2]
+FirstUse = true
 IR/Center = 52
 IR/Width = 63
 IR/Height = 52
 [Wiimote3]
+FirstUse = true
 IR/Center = 52
 IR/Width = 63
 IR/Height = 52
 [Wiimote4]
+FirstUse = true
 IR/Center = 52
 IR/Width = 63
 IR/Height = 52
