--- a/Data/User/GameConfig/RSPE01.ini
+++ b/Data/User/GameConfig/RSPE01.ini
@@ -13,18 +13,22 @@ EmulationIssues =
 ProjectionHack = 0
 [Gecko]
 [Wiimote1]
+FirstUse = true
 IR/Center = 60
 IR/Width = 54
 IR/Height = 55
 [Wiimote2]
+FirstUse = true
 IR/Center = 60
 IR/Width = 54
 IR/Height = 55
 [Wiimote3]
+FirstUse = true
 IR/Center = 60
 IR/Width = 54
 IR/Height = 55
 [Wiimote4]
+FirstUse = true
 IR/Center = 60
 IR/Width = 54
 IR/Height = 55
