[Inifile, etc] change gameini inputconfig override
changes gameini inputconfig to copy section from baseini on first use, rather than doing a LoadConfig override. makes previous changes to IniFile::Set and ControllerEmu::ControlGroup::LoadConfig unnecessary and they can therefore be reverted.

fixes to CI and DInput init logic. CI::Init and CI:IsInit waits for init to complete.

VideoConfig hotkey fixes

rename ControlDialog to ControlDiag to match other filenames

moved debugging mode menu option from file to view menu

minor revert i FrameAui

linux build fixes

--- a/Source/Core/DolphinWX/Dolphin.vcxproj
+++ b/Source/Core/DolphinWX/Dolphin.vcxproj
@@ -182,7 +182,7 @@
   <ItemGroup>
     <ClCompile Include="Src\AboutDolphin.cpp" />
     <ClCompile Include="Src\ARCodeAddEdit.cpp" />
-    <ClCompile Include="Src\ControlDialog.cpp" />
+    <ClCompile Include="Src\ControlDiag.cpp" />
     <ClCompile Include="Src\Debugger\BreakpointDlg.cpp" />
     <ClCompile Include="Src\Debugger\BreakpointView.cpp" />
     <ClCompile Include="Src\Debugger\BreakpointWindow.cpp" />
@@ -248,7 +248,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="Src\AboutDolphin.h" />
     <ClInclude Include="Src\ARCodeAddEdit.h" />
-    <ClInclude Include="Src\ControlDialog.h" />
+    <ClInclude Include="Src\ControlDiag.h" />
     <ClInclude Include="Src\Debugger\BreakpointDlg.h" />
     <ClInclude Include="Src\Debugger\BreakpointView.h" />
     <ClInclude Include="Src\Debugger\BreakpointWindow.h" />
