--- a/Data/User/GameConfig/RM3P01.ini
+++ b/Data/User/GameConfig/RM3P01.ini
@@ -27,23 +27,7 @@ EFBCopyEnable = True
 DisableWiimoteSpeaker = 1
 [Video_Hacks]
 EFBEmulateFormatChanges = True
-[Wiimote1]
-FirstUse = true
-IR/Center = 89
-IR/Width = 61
-IR/Height = 72
-[Wiimote2]
-FirstUse = true
-IR/Center = 89
-IR/Width = 61
-IR/Height = 72
-[Wiimote3]
-FirstUse = true
-IR/Center = 89
-IR/Width = 61
-IR/Height = 72
-[Wiimote4]
-FirstUse = true
+[WiimoteFirstUse]
 IR/Center = 89
 IR/Width = 61
 IR/Height = 72
