--- a/Data/User/GameConfig/RBUP08.ini
+++ b/Data/User/GameConfig/RBUP08.ini
@@ -12,23 +12,7 @@ PH_SZFar = 0
 PH_ExtraParam = 0
 PH_ZNear = 
 PH_ZFar = 0.1
-[Wiimote1]
-FirstUse = true
-IR/Center = 50
-IR/Width = 40
-IR/Height = 31
-[Wiimote2]
-FirstUse = true
-IR/Center = 50
-IR/Width = 40
-IR/Height = 31
-[Wiimote3]
-FirstUse = true
-IR/Center = 50
-IR/Width = 40
-IR/Height = 31
-[Wiimote4]
-FirstUse = true
+[WiimoteFirstUse]
 IR/Center = 50
 IR/Width = 40
 IR/Height = 31
