--- a/Data/User/GameConfig/RM8P01.ini
+++ b/Data/User/GameConfig/RM8P01.ini
@@ -17,23 +17,7 @@ PH_ZFar =
 ForceFiltering = False
 [Video_Hacks]
 DlistCachingEnable = False
-[Wiimote1]
-FirstUse = true
-IR/Center = 52
-IR/Width = 63
-IR/Height = 52
-[Wiimote2]
-FirstUse = true
-IR/Center = 52
-IR/Width = 63
-IR/Height = 52
-[Wiimote3]
-FirstUse = true
-IR/Center = 52
-IR/Width = 63
-IR/Height = 52
-[Wiimote4]
-FirstUse = true
+[WiimoteFirstUse]
 IR/Center = 52
 IR/Width = 63
 IR/Height = 52
