--- a/Data/User/GameConfig/RSPP01.ini
+++ b/Data/User/GameConfig/RSPP01.ini
@@ -12,23 +12,7 @@ EmulationIssues =
 [Video]
 ProjectionHack = 0
 [Gecko]
-[Wiimote1]
-FirstUse = true
-IR/Center = 60
-IR/Width = 54
-IR/Height = 55
-[Wiimote2]
-FirstUse = true
-IR/Center = 60
-IR/Width = 54
-IR/Height = 55
-[Wiimote3]
-FirstUse = true
-IR/Center = 60
-IR/Width = 54
-IR/Height = 55
-[Wiimote4]
-FirstUse = true
+[WiimoteFirstUse]
 IR/Center = 60
 IR/Width = 54
 IR/Height = 55
